<resources>
	<string name="app_name">Flicks</string>

	<!--	string main menu start-->
	<string name="home">Home</string>
	<string name="search">Search</string>
	<string name="download">Download</string>
	<string name="profile">Profile</string>
	<!--	string main menu end-->

	<!--	string splash activity start-->
	<string name="hello">Hello</string>
	<string name="into_the_flicks">into the Flicks!</string>
	<!--	string splash activity end-->

	<!--    TODO: This is the string of profile fragment.-->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="account">Account</string>
	<string name="admin">Admin</string>
	<string name="member">Member</string>
	<string name="change_password">Change Password</string>
	<string name="general">General</string>
	<string name="notification">Notification</string>
	<string name="language">Language</string>
	<string name="country">Country</string>
	<string name="clear_cache">Clear Cache</string>
	<string name="more">More</string>
	<string name="legal_and_policies">Legal and Policies</string>
	<string name="help_and_feedback">Help and Feedback</string>
	<string name="about_us">About Us</string>
	<string name="suggested_languages">Suggested Languages</string>
	<string name="logout">Log Out</string>

	<!--    TODO: This is the string of notification bottom sheet fragment.-->
	<string name="messages_notifications">Messages Notifications</string>
	<string name="exceptions">Exceptions</string>
	<string name="show_notifications">Show Notifications</string>

	<!--	string home fragment start-->
	<string name="search_a_title">Search a title...</string>
	<string name="text_search_not_found">we are sorry, we can not find the movie :(</string>
	<string name="desc_search_not_found">Find your movie by Type title, categories, years, etc</string>
	<string name="cancel">Cancel</string>
	<string name="action">action |</string>
	<string name="coming_soon">coming soon!</string>
	<string name="play">Play</string>
	<string name="descriptions">Descriptions</string>
	<!--	string home fragment end-->
</resources>
