<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/mainSearchContainer"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/dark_color"
		tools:context=".ui.activities.ItemSearchedActivity">

		<!--		Search field start-->
		<LinearLayout
			android:id="@+id/containerSearchLayout"
			android:layout_width="match_parent"
			android:layout_height="50dp"
			android:layout_marginHorizontal="16dp"
			android:layout_marginVertical="12dp"
			android:gravity="center_vertical"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent">

			<LinearLayout
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_marginEnd="12dp"
				android:layout_weight="1"
				android:background="@drawable/search_field_bg"
				android:gravity="center_vertical"
				android:paddingHorizontal="16dp"
				android:paddingVertical="6dp">

				<ImageView
					android:layout_width="40dp"
					android:layout_height="40dp"
					android:contentDescription="@null"
					android:padding="10dp"
					android:src="@drawable/search_icon"
					app:tint="@color/grey_color" />

				<EditText
					android:id="@+id/searchField"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:autofillHints="name"
					android:background="@null"
					android:hint="@string/search_a_title"
					android:imeOptions="actionSearch"
					android:inputType="text"
					android:maxLength="50"
					android:paddingHorizontal="8dp"
					android:textColor="@color/white_color"
					android:textColorHint="@color/grey_color"
					android:textSize="14sp" />

			</LinearLayout>

			<TextView
				android:id="@+id/buttonCancel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:ellipsize="end"
				android:maxLength="8"
				android:maxLines="1"
				android:text="@string/cancel"
				android:textColor="@color/white_grey_color" />

		</LinearLayout>
		<!--		Search field end-->

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/rcItemSearch"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="16dp"
			android:layout_marginTop="12dp"
			android:visibility="gone"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/containerSearchLayout" />

		<LinearLayout
			android:id="@+id/containerSearchNotFound"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:orientation="vertical"
			android:padding="16dp"
			android:visibility="gone"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent">

			<ImageView
				android:layout_width="76dp"
				android:layout_height="76dp"
				android:layout_marginEnd="8dp"
				android:contentDescription="@null"
				android:scaleType="centerCrop"
				android:src="@drawable/search_not_found_image" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="12dp"
				android:ems="10"
				android:text="@string/text_search_not_found"
				android:textAlignment="center"
				android:textColor="@color/white_grey_color" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="4dp"
				android:ems="14"
				android:text="@string/desc_search_not_found"
				android:textAlignment="center"
				android:textColor="@color/grey_color"
				android:textSize="12sp" />
		</LinearLayout>

	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>