<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_color"
    android:orientation="vertical"
    >
    <!--    tools:context=".ui.bottom_sheets.NotificationBottomSheetFragment"-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginHorizontal="170dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/line_bottom_sheet_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/background_container_profile"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/messages_notifications"
            android:textColor="@color/grey_color"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:ellipsize="end"
                android:fontFamily="@font/montserrat_semi_bold"
                android:maxLines="1"
                android:text="@string/show_notifications"
                android:textColor="@color/white_color"
                android:textSize="18sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:ellipsize="end"
                android:fontFamily="@font/montserrat_semi_bold"
                android:maxLines="1"
                android:text="@string/exceptions"
                android:textColor="@color/white_color"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>